[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = "0.7.1"


machineinstr = { path = "../machineinstr" }
tracing = "0.1.37"
core = { version = "0.1.0", path = "../core" }

