[package]
name = "vm"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
cranelift = "0.92.0"
elf = "0.7.1"
machineinstr = { version = "0.1.0", path = "../machineinstr" }
num-traits = "0.2.15"
slab = "0.4.7"
smallvec = "1.10.0"
thiserror = "1.0.38"
thread_local = "1.1.4"
utility = { version = "0.1.0", path = "../utility" }
